# dazzlefruit

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.svelte  _alpha_compositing.scss  _theme.scss  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  neopixel_controller.rs  pattern_builder.rs  pico_connection.rs  tauri_events.rs  test_patterns.rs  watch_guard.rs
src-tauri/src/pattern_builder/: component.rs  library.rs  math_functions.rs  pattern.rs  pattern_context.rs
src-tauri/src/pattern_builder/component/: basic_config.rs  data.rs  filter.rs  frame.rs  layer.rs  macros.rs  property.rs  shared_component.rs  texture.rs  texture_generator.rs  view_serde.rs
src-tauri/src/pattern_builder/component/layer/: filter.rs  generic.rs  io_type.rs  layer_stack.rs  scalar_texture.rs  texture.rs  texture_generator.rs
src-tauri/src/pattern_builder/component/property/: cloning.rs  color.rs  component.rs  computed.rs  layer.rs  layer_stack.rs  locked.rs  num.rs  num_vec.rs  raw.rs  string.rs
src-tauri/src/pattern_builder/pattern_context/: position_map.rs
src-tauri/src/pico_connection/: non_locking_io.rs  packet_types.rs
src/lib/: Connect.svelte  ConnectionBar.svelte  Debug.svelte  NeopixelController.svelte  PatternBuilder.svelte
src/lib/pattern_builder/: Layer.svelte  Pattern.svelte  Preview3D.svelte  Property.svelte  layer-config-types.ts  layer-view.ts  pattern-builder-view.ts  pattern-builder.ts  pattern-view.ts  rgb-to-hex.ts
