[package]
name = "dazzlefruit"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
palette = "0.7.3"
itertools = "0.11.0"
dyn-clone = "1.0.13"
noise = "0.8.2"
static_assertions = "1.1.0"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
vec1 = "1.10.1"
erased-serde = "0.3.31"
parking_lot = { version = "0.12.1", features = ["serde"] }
rand_distr = "0.4.3"
num-traits = "0.2.16"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
